# gravitron

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  devenv.nix  release-plz.toml  release.toml
.config/: nextest.toml
.github/: dependabot.yml  mergify.yml
.github/workflows/: auto-merge.yml  checks.yml  publish.yml  release-plz.yml  release.yml
assets/: light.vert  shader.frag  shader.vert
crates/gravitron_components/: CHANGELOG.md  Cargo.toml  README.md
crates/gravitron_components/src/: lib.rs
crates/gravitron_components/src/components/: transform.rs
crates/gravitron_components/src/systems/: mod.rs  propagation.rs
crates/gravitron_ecs/: CHANGELOG.md  Cargo.toml  README.md
crates/gravitron_ecs/benches/: storage.rs  storage.rs_  system.rs
crates/gravitron_ecs/ecs_macros/src/: lib.rs
crates/gravitron_ecs/gravitron_ecs_macros/: CHANGELOG.md  Cargo.toml  README.md
crates/gravitron_ecs/gravitron_ecs_macros/src/: lib.rs
crates/gravitron_ecs/gravitron_ecs_macros/tests/: test.rs
crates/gravitron_ecs/src/: commands.rs  components.rs  entity.rs  lib.rs  main.rs  query.rs  scheduler.rs  storage.rs  test.rs  tick.rs  world.rs
crates/gravitron_ecs/src/scheduler/: graph.rs  mod.rs
crates/gravitron_ecs/src/systems/: metadata.rs  mod.rs  query.rs  resources.rs
crates/gravitron_ecs/src/systems/query/: filter.rs  mod.rs
crates/gravitron_hierarchy/: CHANGELOG.md  Cargo.toml  README.md
crates/gravitron_hierarchy/src/: command_ext.rs  components.rs  lib.rs  propagation.rs  test.rs
crates/gravitron_macro_utils/: CHANGELOG.md  Cargo.toml  README.md
crates/gravitron_macro_utils/src/: lib.rs
crates/gravitron_plugin/: CHANGELOG.md  Cargo.toml  README.md
crates/gravitron_plugin/src/: app.rs  config.rs  lib.rs  manager.rs  stages.rs
crates/gravitron_plugin/src/config/: engine.rs  mod.rs  vulkan.rs  window.rs
crates/gravitron_plugin/src/ecs/resources/: engine_commands.rs  engine_info.rs
crates/gravitron_renderer/: CHANGELOG.md  Cargo.toml  README.md
crates/gravitron_renderer/assets/: light.frag  light.vert  shader.frag  shader.vert
crates/gravitron_renderer/src/: config.rs  debug.rs  device.rs  error.rs  instance.rs  lib.rs  surface.rs
crates/gravitron_renderer/src/ecs/: mod.rs
crates/gravitron_renderer/src/ecs/components/: camera.rs  lighting.rs  mod.rs  renderer.rs  transform.rs
crates/gravitron_renderer/src/ecs/resources/: mod.rs  vulkan.rs
crates/gravitron_renderer/src/ecs/systems/: descriptor.rs  memory.rs  mod.rs  pipeline.rs  propagation.rs  renderer.rs
crates/gravitron_renderer/src/graphics/: framebuffer.rs  mod.rs  swapchain.rs
crates/gravitron_renderer/src/graphics/resources/: material.rs
crates/gravitron_renderer/src/graphics/resources/model/: mod.rs
crates/gravitron_renderer/src/memory/: advanced_buffer.rs  allocator.rs  buffer.rs  error.rs  image.rs  manager.rs  mod.rs  sampler_image.rs  simple_buffer.rs  types.rs
crates/gravitron_renderer/src/model/: manager.rs  mod.rs  model.rs
crates/gravitron_renderer/src/model/default/: cube.rs  plane.rs
crates/gravitron_renderer/src/pipeline/: descriptors.rs  manager.rs  mod.rs  pools.rs
crates/gravitron_renderer/src/pipeline/descriptor/: manager.rs  mod.rs  pool.rs
crates/gravitron_renderer/src/pipeline/graphics/: mod.rs  stage.rs
crates/gravitron_renderer/src/renderer/: framebuffer.rs  mod.rs  render_pass.rs  swapchain.rs
crates/gravitron_renderer/src/renderer/resources/: lighting.rs  material.rs  mod.rs
crates/gravitron_utils/: CHANGELOG.md  Cargo.toml  README.md
crates/gravitron_utils/src/: lib.rs
crates/gravitron_utils/src/thread/: mod.rs  mutator.rs  signal.rs  thread_pool.rs
crates/gravitron_window/: CHANGELOG.md  Cargo.toml  README.md
crates/gravitron_window/src/: lib.rs  window.rs
crates/gravitron_window/src/ecs/: mod.rs
crates/gravitron_window/src/ecs/resources/: event_loop.rs  handle.rs  input.rs  mod.rs
crates/gravitron_window/src/ecs/systems/: input_update.rs  mod.rs
ecs/: Cargo.toml
ecs/ecs_macros/: Cargo.toml
ecs/src/: archetypes.rs  commands.rs  entity.rs  lib.rs  main.rs  query.rs  scheduler.rs  storage.rs  systems.rs  world.rs
ecs/src/systems/: metadata.rs  mod.rs
shaders/: shader copy.frag  shader copy.vert  shader.frag  shader.vert
src/: aetna.rs  camera.rs  components.rs  debug.rs  ecs.rs  engine.rs  error.rs  lib.rs  light.rs  main.rs  main.rs.  model.rs  pipeline.rs  queues.rs  resources.rs  swapchain.rs  texture.rs  utils.rs
src/config/: app.rs  mod.rs  utils.rs  vulkan.rs
src/ecs/: components.rs  mod.rs
src/ecs/components/: lighting.rs  mod.rs
src/ecs/resources/: engine_info.rs  input.rs  mod.rs  window.rs
src/ecs/systems/: mod.rs  renderer.rs  stages.rs
src/ecs_resources/components/: camera.rs  mod.rs  renderer.rs  transform.rs
src/ecs_resources/resources/: engine_commands.rs  engine_info.rs  mod.rs
src/ecs_resources/systems/: mod.rs  renderer.rs
src/engine/: manager.rs  mod.rs  network.rs  renderer.rs  updater.rs  window.rs
src/old/: aetna.rs  buffer.rs  main.rs  model.rs  pools.rs  queues.rs  surface.rs  swapchain.rs
src/scene/: game_object.rs  mod.rs
src/scene/components/: mesh_renderer.rs  mod.rs  transform.rs
src/systems/: renderer.rs
src/util/: mod.rs  mutator.rs  signal.rs
src/vulkan/: config.rs  debug.rs  device.rs  error.rs  instance.rs  mod.rs  surface.rs
src/vulkan/graphics/: framebuffer.rs  mod.rs  pipeline.rs  pools.rs  render_pass.rs  swap_chain.rs  swapchain.rs
src/vulkan/graphics/resources/: lighting.rs  material.rs  mod.rs  model.rs
src/vulkan/graphics/resources/model/: cube.rs  mod.rs  plane.rs
src/vulkan/memory/: advanced_buffer.rs  allocator.rs  buffer.rs  image.rs  manager.rs  manged_buffer.rs  mod.rs  sampler_image.rs  simple_buffer.rs  texture.rs  types.rs
src/vulkan/pipeline/: descriptors.rs  manager.rs  mod.rs  pools.rs
src/vulkan/shader/: buffer.rs
testing/: shader.frag
