[package]
name = "gravitron_ecs"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "game", "gravitron"]
categories = ["game-engines", "data-structures"]
repository = "https://github.com/Profiidev/gravitron"
description = "A simple and performant ECS for Gravitron"
exclude = ["CHANGELOG.md"]
readme = "README.md"

[dependencies]
gravitron_ecs_macros = { path = "./gravitron_ecs_macros" , version = "0.1.4" }
gravitron_utils = { path = "../gravitron_utils" , version = "0.1.2" }
downcast = "0.11.0"
log = "0.4.22"

[features]
debug = []
