[package]
name = "gravitron_ecs"
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "game", "gravitron"]
categories = ["game-engines", "data-structures"]
repository = "https://github.com/Profiidev/gravitron"
description = "A simple and performant ECS for Gravitron"
exclude = ["CHANGELOG.md"]
readme = "README.md"

[dependencies]
gravitron_ecs_macros = { path = "./gravitron_ecs_macros" , version = "0.1.6" }
gravitron_utils = { workspace = true }
log = { workspace = true }
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = "0.8.2"

[features]
debug = []

#[[bench]]
#name = "storage"
#harness = false

[[bench]]
name = "system"
harness = false
