[package]
name = "gravitron_hierarchy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["game", "gravitron"]
repository = "https://github.com/Profiidev/gravitron"
description = "Gravitron's ECS Hierarchy"
exclude = ["CHANGELOG.md"]
readme = "README.md"

[dependencies]
gravitron_ecs = { workspace = true }

[features]
debug = ["gravitron_ecs/debug"]
