[package]
name = "gravitron_macro_utils"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["game", "gravitron"]
repository = "https://github.com/Profiidev/gravitron"
description = "Gravitron's Macro Utils"
exclude = ["CHANGELOG.md"]

[dependencies]
syn = "2.0.96"
toml_edit = { version = "0.22.22", default-features = false, features = ["parse"] }
