[package]
name = "gravitron_macro_utils"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["game", "gravitron"]
repository = "https://github.com/Profiidev/gravitron"
description = "Gravitron's Macro Utils"
exclude = ["CHANGELOG.md"]

[dependencies]
syn = { workspace = true }
toml_edit = { version = "0.25.1", default-features = false, features = ["parse"] }
