[package]
name = "gravitron_plugin"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["game", "gravitron"]
categories = ["game-engines"]
repository = "https://github.com/Profiidev/gravitron"
description = "Gravitron Plugin"
exclude = ["CHANGELOG.md"]
readme = "README.md"

[dependencies]
gravitron_ecs = { workspace = true }
log = { workspace = true }

[features]
debug = ["gravitron_ecs/debug"]
