[package]
name = "gravitron_utils"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["game", "gravitron"]
repository = "https://github.com/Profiidev/gravitron"
description = "Gravitron's Utils"
exclude = ["CHANGELOG.md"]

[dependencies]
log = "0.4.25"

[features]
debug = []
