[package]
name = "gravitron_window"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["game", "gravitron"]
categories = ["game-engines"]
repository = "https://github.com/Profiidev/gravitron"
description = "Gravitron Window"
exclude = ["CHANGELOG.md"]
readme = "README.md"

[dependencies]
winit = { workspace = true }
anyhow = { workspace = true }
gravitron_plugin = { workspace = true }
gravitron_utils = { workspace = true }
gravitron_ecs = { workspace = true }
