[package]
name = "gravitron_window"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["game", "gravitron"]
categories = ["game-engines"]
repository = "https://github.com/Profiidev/gravitron"
description = "Gravitron Window"
exclude = ["CHANGELOG.md"]
readme = "README.md"

[dependencies]
winit = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
gravitron_plugin = { workspace = true }
gravitron_utils = { workspace = true }
gravitron_ecs = { workspace = true }

[features]
debug = ["gravitron_ecs/debug", "gravitron_plugin/debug", "gravitron_utils/debug"]
