[package]
name = "gravitron_ecs_macros"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "game", "gravitron"]
categories = ["game-engines", "data-structures"]
repository = "https://github.com/Profiidev/gravitron"
description = "Macros for Gravitron's ECS"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
gravitron_macro_utils = { path = "../../gravitron_macro_utils", version = "0.1.2" }

[lib]
proc-macro = true

