[package]
name = "gravitron_ecs_macros"
version = "0.1.6"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "game", "gravitron"]
categories = ["game-engines", "data-structures"]
repository = "https://github.com/Profiidev/gravitron"
description = "Macros for Gravitron's ECS"
readme = "README.md"

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
gravitron_macro_utils = { workspace = true }

[lib]
proc-macro = true

